--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,5 +1,6 @@
 .container {
     margin: 0 auto;
+    padding: 0 15px;
     @media screen and (min-width: 480px) {
             width: 480px;
         }
