--- a/sass/components/_footer-logo.scss
+++ b/sass/components/_footer-logo.scss
@@ -8,6 +8,7 @@
     @media screen and (min-width: 1200px) {
         font-size: 26px;
         line-height: 1.19;
+        text-align: start;
     }
     .footer__logo-part {
             color: var(--logo-focus-hover-color);
