--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -32,6 +32,7 @@
     @media screen and (min-width: 1200px) {
         margin-left: 92px;
         margin-right: 0;
+        gap: 50px;
     }
 }
 
