--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -1,13 +1,7 @@
 .hero {
     padding: 118px 0;
     margin: 0 auto;
-    @media screen and (min-width: 768px) {
-        width: 768px;
-        padding: 118px 0;
-    }
-    
     @media screen and (min-width: 1200px) {
-        width: 1200px;
         padding: 200px 0;
     }
     background-color: #c4c4c4;
