--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -1,7 +1,5 @@
 .portfolio-hero {
-    .container-portfolio {
-            padding: var(--padding-section-desktop);
-        }
+    padding: var(--padding-section-desktop);
 }
 
 .filter {
