--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,8 +4,8 @@
     --title-color: #212121;
     --main-font-family: "roboto", sans-serif;
     --title-logo-font-weight: 700;
-    --padding-section: 60px 15px;
-    --padding-section-desktop: 94px 15px;
+    --padding-section: 60px 0px;
+    --padding-section-desktop: 94px 0px;
     --animation-hover-text: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     --animation-hover-bg: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
